log
sá., 14 de may. de 2022 22:11:48: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  0|5
total_score: 0/70
e909da3
sá., 14 de may. de 2022 22:13:03: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:19: error: assignment to expression with array type
       adj_n->sudo = n->sudo;
                   ^
Compilation failed
6dd5780
sá., 14 de may. de 2022 22:14:03: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8983490
sá., 14 de may. de 2022 22:15:41: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
34431ac
sá., 14 de may. de 2022 22:16:50: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
515c4f7
sá., 14 de may. de 2022 22:17:16: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1133e11
